--- a/README.rdoc
+++ b/README.rdoc
@@ -35,12 +35,11 @@ In order to run the application follow these steps:
 
 9. Open the browser at http://localhost:8080, signup and access AI-Colony.
 
-Credits
--------
+== Credits
 
-![Algorithmica](http://algorithmica.it/images/logo.png)
+http://algorithmica.it/images/logo.png
 
-The Harvestar is owned by [Algorithmica Srl](http://algorithmica.it).
+The Harvestar is owned by [Algorithmica Srl](http://algorithmica.it). 
 This project is part of the Specific Targeted Research Project (STReP) Cloud-TM[http://www.cloudtm.eu] and is partially funded by the
 European Commission under the Seventh Framework Programme for Research and Technological Development (FP7 - 2007-2013) with contract no. 257784.
 
@@ -49,8 +48,7 @@ The names and logos for Algorithmica are trademarks of Algorithmica Srl.
 
 
 
-Copyright
----------
+== Copyright
 
 Madmass is Copyright (c) 2010-2013 Algorithmica Srl. It is free software, and may be redistributed under the terms specified in the
 LICENSE.txt file.
